[project]
name = "MedImageInsights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "mlflow==2.14.3",
    "cffi==1.17.1",
    "cloudpickle==3.0.0",
    "colorama==0.4.6",
    "einops==0.8.0",
    "ftfy==6.2.3",
    "fvcore==0.1.5.post20221221",
    "mup==1.0.0",
    "numpy==1.26.4",
    "packaging==24.1",
    "pandas==2.0.3",
    "pyyaml==6.0.2",
    "requests==2.28.1",
    "sentencepiece==0.2.0",
    "tenacity==9.0.0",
    "timm==1.0.15",
    "tornado==6.4.1",
    "transformers==4.46.2",
#    "huggingface-hub==0.26.1",
    "fastapi==0.115.6",
#    "opencv-python>=4.10.0.84",
]
